<resources>
    <string name="app_name">WitchGame</string>
    <string name="sign_out_text">Sign Out</string>
    <string name="read_write_text">Test me!</string>
    <string name="btn_start_text">Start</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test_text">This is a test! :)</string>
    <string name="label_title">Title</string>
    <string name="label_home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="action_currency">Currency</string>
    <string name="action_bag">Bag</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings_label">Settings</string>
    <string name="settings">Settings</string>
    <string name="link_account">Link account</string>
    <string name="familiars">Familiars</string>
    <string name="home">Home</string>
    <string name="bag">Bag</string>
    <string name="mail">Mail</string>
    <string name="header_title">Test</string>
    <string name="header_text">Test2</string>
    <string name="profile_title">Profile</string>
    <string name="world_title">World</string>
    <string name="worldmap">World Map</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="news">News</string>
    <string name="community">Community</string>
    <string name="app_title">App</string>
    <string name="profile">Profile</string>
    <string name="mywitch_title">My Witch</string>
    <string name="guilds">Guilds</string>
    <string name="community_hall">Community Hall</string>
    <string name="friends">Friends</string>
    <string name="spellbook">Spellbook</string>
    <string name="discord">Discord</string>
    <string name="event">Event</string>
    <string name="arena">Arena</string>
    <string name="coven">Coven</string>
    <string name="game_title">Game</string>
    <string name="story">Story</string>
    <string name="name_label">Nickname</string>
    <string name="name_error">ERROR: Invalid nickname.</string>
    <string name="birthday_label">Birthday</string>
</resources>